refactor: remove superseded schedule code
